tried a fix on cartogram overlap on wide monitors

--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ svg .highlightRect {
 }
 
 #cartogram {
-    height: 500px;
+    height: 525px;
 }
 
 path.state {
